--- a/css/components/badge.css
+++ b/css/components/badge.css
@@ -7,3 +7,13 @@
   top: -15px !important;
   left: -15px !important;
 }
+
+#circle {
+	position: relative;
+	width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  background: #F3C15B;
+  bottom: 170px !important;
+	left: 290px !important;
+}
