--- a/css/components/button.css
+++ b/css/components/button.css
@@ -37,7 +37,7 @@
   border-radius: 10px;
   font-weight: bold;
   background: #222e50;
-  font-size: 30px;
+  font-size: 20px;
 }
 
 .btn-peteats:hover {
@@ -75,21 +75,22 @@
 }
 
 .signup {
-  color: white !important; 
-  background: #222e50;
+  color: black !important; 
+  background: #F3C15B;
+  font-weight: bolder;
   padding: 10px 15px;
   border-radius: 50px;
   text-align: center;
   font-size: 20px;
   text-align: center;
   vertical-align: 50%;
-  border: 2px solid #222e50;
+  border: 2px solid #F3C15B;
   text-decoration: none;
 }
 
 .signup:hover {
-  color: #222e50 !important;
-  border: 2px solid #222e50;
+  color: #F3C15B !important;
+  border: 2px solid #F3C15B;
   background: white;
   text-decoration: none;
 }
